@@ -212,6 +212,7 @@ foreach(format ${formats})
 endforeach(format)
 endif(MSVC)
 
+if(NOT MINIMAL_BUILD)
 if(MSVC)
   set(xmlsources "")
   foreach(format ${formats_xml})
@@ -242,3 +243,4 @@ foreach(format ${formats_xml})
                         SUFFIX ${MODULE_EXTENSION})
 endforeach(format)
 endif(MSVC)
+endif(NOT MINIMAL_BUILD)
